# Scheduling-Algorithms-for-CPU

./: README.md  pyproject.toml
assets/md/: fcfs.md  intro.md  multy_queue.md  priority.md  round_robin.md  sjf.md
src/: banchmark_enerator.py  metric.py  process.py
src/schedulers/: __init__.py  fcfs.py  multi_scheduling.py  non_preemprive_priority_scheduling.py  non_preemptive_sjf.py  preemprive_priority_scheduling.py  preemptive_sjf.py  round_robin.py  scheduler_interface.py
