[tool.poetry]
name = "scheduling-algorithms-for-cpu"
version = "0.1.0"
description = ""
authors = ["danila12315454 <danilaprig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
